# peripherals_gimbal

./: CMakeLists.txt
include/: gimbal.h
src/: gimbal.c  gimbal_core.h
src/drivers/: drv_udp_TZ0xxx.c
test/: test_gimbal_udp.c
